Aug 06 2002  2.5.2  Fixed preprocessor problem in pcapsource.cc
Aug 03 2002  2.5.2  Started 2.5.2 development tree.

Aug 03 2002  2.4.6  Released 2.4.6 with numerous bugfixes to the 2.4.5 code.

Aug 03 2002  2.5.1  Fixed include order in expat.cc
                    Added "simpleborder" pref option to use non-high-ascii
                     border chars (mainly zaurus, but some other terminals
                     might need this)
                    Changed default waypoint file to way_kismet.txt
Aug 02 2002  2.5.1  Fixed sound playing completely (I hope)
                    Squished segfault-on-quit due to improper deleting of 
                     objects
                    Improved graphics in the panels interface to use solid 
                     lines if the curses implementation defines them.  (Now
                     maybe Dave will stop bugging me. :P )
Aug 01 2002  2.5.1  Added stderr and stdout suppression to the sound playing
                     binary forks
                    Added kill signal to sound and speech pids to stop them
                     when we exit.
Jul 31 2002  2.5.1  Made packetsignatures.h bsd-friendly and added a BSD
                     prism2 unmonitor (Dave Worth)
                    More memory alignment errors in tcpclient fixed.
Jul 30 2002  2.5.1  Started 2.5.1 development tree

Jul 30 2002  2.4.5  Dropped 2.4.5 release from current development code.  
                     Numerous bugfixes and some new features.

Jul 30 2002  2.5    Fixed window sizing on small screens and caught possible
                     segfaults.
                    Added permissions to wav and config files (from debian)
Jul 29 2002  2.5    Handled exception fds in sound and speech
                    Killed more minor memory leaks
                    Fixed memory offset on the ipmap loading, should fix the
                     bus errors on ARM.
                    Fixed memory alignment errors in expat.cc for some 