@@ -1,4 +1,5 @@
 Aug 06 2002  2.5.2  Fixed preprocessor problem in pcapsource.cc
+                    Maybe fixed speech
 Aug 03 2002  2.5.2  Started 2.5.2 development tree.
 
 Aug 03 2002  2.4.6  Released 2.4.6 with numerous bugfixes to the 2.4.5 code.
